# LibCMaker_AGG

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_agg.cmake  lib_cmaker_agg.cmake
cmake/: cmr_build_rules_agg.cmake  cmr_find_package_agg.cmake  cmr_get_download_params_agg.cmake
cmake/modules/: cmr_agg_cmaker.cmake  cmr_agg_get_download_params.cmake  cmr_build_rules_agg.cmake  patched_CMakeLists.txt  patched_bin_AggConfig.cmake.in  patched_bin_FindAgg.cmake  patched_src_CMakeLists.txt
cmake/modules/agg-2.4.127/: CMakeLists.txt
cmake/modules/agg-2.4.127/src/: CMakeLists.txt
example/TestCompileWithAGG/: CMakeLists.txt  example.cpp
patch/agg-2.4.128/: CMakeLists.txt
patch/agg-2.4.128/examples/: CMakeLists.txt
patch/agg-2.4.128/src/: CMakeLists.txt
samples/TestCompileWithAGG/: CMakeLists.txt  README.md
samples/TestCompileWithAGG/src/: example.cpp  example_test.cpp
samples/TestCompileWithAGG/test/: CMakeLists.txt
